<resources>
    <string name="ALongTimeAgo">xem lần cuối cách đây đã lâu</string>
    <string name="AccessError">Lỗi truy cập</string>
    <string name="AccountSettings">Account Settings</string>
    <string name="AccurateTo">Accurate to %1$s</string>
    <string name="ActionAddUser">un1 đã thêm un2</string>
    <string name="ActionAddUserSelf">un1 đã quay lại nhóm</string>
    <string name="ActionAddUserSelfMega">un1 đã tham gia nhóm</string>
    <string name="ActionAddUserSelfYou">Bạn đã quay lại nhóm</string>
    <string name="ActionAddUserYou">un1 đã thêm bạn</string>
    <string name="ActionChangedPhoto">un1 đã thay đổi ảnh đại diện nhóm</string>
    <string name="ActionChangedTitle">un1 đã đổi tên nhóm thành un2</string>
    <string name="ActionChannelChangedPhoto">Ảnh đại diện kênh đã được thay đổi</string>
    <string name="ActionChannelChangedTitle">Tên kênh đã được đổi thành un2</string>
    <string name="ActionChannelRemovedPhoto">Ảnh đại diện kênh đã bị xóa</string>
    <string name="ActionCreateChannel">Kênh đã được tạo</string>
    <string name="ActionCreateGroup">un1 đã tạo nhóm</string>
    <string name="ActionCreateMega">Nhóm đã được tạo</string>
    <string name="ActionInviteUser">un1 đã tham gia nhóm thông qua liên kết mời</string>
    <string name="ActionInviteYou">Bạn đã tham gia nhóm thông qua liên kết mời</string>
    <string name="ActionKickUser">un1 đã xóa un2</string>
    <string name="ActionKickUserYou">un1 đã xóa bạn</string>
    <string name="ActionLeftUser">un1 đã rời khỏi nhóm</string>
    <string name="ActionMigrateFromGroup">Nhóm này đã được nâng cấp thành nhóm siêu cấp</string>
    <string name="ActionMigrateFromGroupNotify">%1$s đã được nâng cấp thành nhóm siêu cấp</string>
    <string name="ActionPinnedContact">un1 đã ghim một liên lạc</string>
    <string name="ActionPinnedFile">un1 đã ghim một tệp tin</string>
    <string name="ActionPinnedGame">un1 đã ghim %1$s</string>
    <string name="ActionPinnedGeo">un1 đã ghim một bản đồ</string>
    <string name="ActionPinnedGeoLive">un1 đã ghim một chia sẻ vị trí</string>
    <string name="ActionPinnedGif">un1 đã ghim một GIF</string>
    <string name="ActionPinnedMusic">un1 đã ghim một bài</string>
    <string name="ActionPinnedNoText">un1 đã ghim một tin nhắn</string>
    <string name="ActionPinnedPhoto">un1 đã ghim một ảnh</string>
    <string name="ActionPinnedRound">un1 đã ghim một tin nhắn video</string>
    <string name="ActionPinnedSticker">un1 đã ghim một sticker</string>
    <string name="ActionPinnedText">un1 đã ghim \"%1$s\"</string>
    <string name="ActionPinnedVideo">un1 đã ghim một video</string>
    <string name="ActionPinnedVoice">un1 đã ghim một tin nhắn thoại</string>
    <string name="ActionRemovedPhoto">un1 đã xóa ảnh đại diện nhóm</string>
    <string name="ActionTakeScreenshoot">un1 đã chụp ảnh màn hình!</string>
    <string name="ActionTakeScreenshootYou">Bạn đã chụp ảnh màn hình!</string>
    <string name="ActionUserScored">un1 scored %1$s</string>
    <string name="ActionUserScoredInGame">un1 scored %1$s in un2</string>
    <string name="ActionYouAddUser">Bạn đã thêm un2</string>
    <string name="ActionYouChangedPhoto">Bạn đã thay đổi ảnh đại diện nhóm</string>
    <string name="ActionYouChangedTitle">Bạn đã đổi tên nhóm thành un2</string>
    <string name="ActionYouCreateGroup">Bạn đã tạo nhóm</string>
    <string name="ActionYouKickUser">Bạn đã xóa un2</string>
    <string name="ActionYouLeftUser">Bạn rời khỏi nhóm</string>
    <string name="ActionYouRemovedPhoto">Bạn đã xóa ảnh đại diện nhóm</string>
    <string name="ActionYouScored">You scored %1$s</string>
    <string name="ActionYouScoredInGame">You scored %1$s in un2</string>
    <string name="Add">Thêm</string>
    <string name="AddAdminErrorBlacklisted">Xin lỗi, bạn không thể thêm người dùng với quyền quản trị viên bởi vì họ nằm trong danh sách đen và bạn không thể mở khóa cấm cho họ.</string>
    <string name="AddAdminErrorNotAMember">Xin lỗi, bạn không thể thêm người dùng với quyền quản trị viên bởi vì họ không phải là thành viên của nhóm này, và bạn không được phép mời họ.</string>
    <string name="AddBannedErrorAdmin">Xin lỗi, bạn không thể cấm người dùng này bởi vì họ là quản trị viên trong nhóm này và bạn không được phép giáng cấp họ.</string>
    <string name="AddCaption">Thêm chú thích...</string>
    <string name="AddContact">Thêm</string>
    <string name="AddContactChat">THÊM LIÊN HỆ</string>
    <string name="AddContactTitle">Thêm thông tin liên lạc</string>
    <string name="AddMasks">Add Masks</string>
    <string name="AddMasksInstalled">New masks added</string>
    <string name="AddMember">Thêm thành viên</string>
    <string name="AddMutual">Thêm thành viên vào nhóm của bạn</string>
    <string name="AddRecipient">Thêm người nhận</string>
    <string name="AddShortcut">Thêm shortcut</string>
    <string name="AddStickers">Add Stickers</string>
    <string name="AddStickersInstalled">New stickers added</string>
    <string name="AddStickersNotFound">Stickers not found</string>
    <string name="AddSubscriber">Thêm người theo dõi</string>
    <string name="AddToContacts">Thêm thông tin liên hệ</string>
    <string name="AddToFavorites">Add to Favorites</string>
    <string name="AddToMasks">Add to Masks</string>
    <string name="AddToStickers">Add to Stickers</string>
    <string name="AddToTheGroup">Thêm %1$s vào nhóm?</string>
    <string name="AddToTheGroupForwardCount">Số lượng tin nhắn cuối để chuyển tiếp:</string>
    <string name="AddToTheGroupTitle">Thêm %1$s tới cuộc trò chuyện %2$s?</string>
    <string name="AddedToFavorites">Sticker was added to Favorites</string>
    <string name="AllMedia">Tất cả phương tiện</string>
    <string name="AllPhotos">Tất cả ảnh</string>
    <string name="AllowFillNumber">Vui lòng cấp phép cho Lotus nhận cuộc gọi, điều này giúp chúng tôi có thể tự động điền mã code cho bạn.</string>
    <string name="AllowReadCall">Vui lòng cấp phép cho Lotus nhận cuộc gọi, điều này giúp chúng tôi có thể tự động điền mã code cho bạn.</string>
    <string name="AllowReadCallAndSms">Vui lòng cấp phép cho Lotus nhận cuộc gọi, điều này giúp chúng tôi có thể tự động điền mã giúp bạn.</string>
    <string name="AllowReadSms">Vui lòng cấp phép cho Lotus có thể nhận tin nhắn SMS, điều này giúp chúng tôi có thể tự động điền mã cho bạn.</string>
    <string name="AlwaysAllow">Always Allow</string>
    <string name="AlwaysAllowPlaceholder">Always allow...</string>
    <string name="AlwaysShareWithPlaceholder">Always share with users...</string>
    <string name="AlwaysShareWithTitle">Always Share</string>
    <string name="AlwaysShowPopup">Luôn luôn bật cửa sổ</string>
    <string name="AndMoreTypingGroup_few">%1$s và %2$d người đang gõ</string>
    <string name="AndMoreTypingGroup_many">%1$s và %2$d người đang gõ</string>
    <string name="AndMoreTypingGroup_one">%1$s và %2$d người đang gõ</string>
    <string name="AndMoreTypingGroup_other">%1$s và %2$d người đang gõ</string>
    <string name="AndMoreTypingGroup_two">%1$s và %2$d người đang gõ</string>
    <string name="AndMoreTypingGroup_zero">%1$s và %2$d người đang gõ</string>
    <string name="AndMoreTyping_few">%1$d người đang gõ</string>
    <string name="AndMoreTyping_many">%1$d người đang gõ</string>
    <string name="AndMoreTyping_one">%1$d người đang gõ</string>
    <string name="AndMoreTyping_other">%1$d người đang gõ</string>
    <string name="AndMoreTyping_two">%1$d người đang gõ</string>
    <string name="AndMoreTyping_zero">%1$d người đang gõ</string>
    <string name="AppContacts_few">%1$d liên lạc trên Lotus</string>
    <string name="AppContacts_many">%1$d liên lạc trên Lotus</string>
    <string name="AppContacts_one">%1$d liên lạc trên Lotus</string>
    <string name="AppContacts_other">%1$d liên lạc trên Lotus</string>
    <string name="AppContacts_two">%1$d liên lạc trên Lotus</string>
    <string name="AppContacts_zero">%1$d liên lạc trên Lotus</string>
    <string name="AppName">Lotus</string>
    <string name="ArchivedMasks">Archived Masks</string>
    <string name="ArchivedMasksAlertInfo">Some of your older masks sets have been archived. You can reactivate them in the Masks Settings.</string>
    <string name="ArchivedMasksAlertTitle">Archived masks</string>
    <string name="ArchivedMasksEmpty">No archived masks</string>
    <string name="ArchivedMasksInfo">You can have up to 200 mask sets installed. Unused masks are archived when you install new sets.</string>
    <string name="ArchivedStickers">Archived Stickers</string>
    <string name="ArchivedStickersAlertInfo">Some of your older sticker sets have been archived. You can reactivate them in the Stickers Settings.</string>
    <string name="ArchivedStickersAlertTitle">Archived stickers</string>
    <string name="ArchivedStickersEmpty">No archived stickers</string>
    <string name="ArchivedStickersInfo">You can have up to 200 sticker sets installed. Unused stickers are archived when you install new sets.</string>
    <string name="AreTypingGroup">%1$s đang gõ...</string>
    <string name="AreYouSure">Bạn có chắc không?</string>
    <string name="AreYouSureBlockContact">Bạn có chắc muốn chặn liên lạc này?</string>
    <string name="AreYouSureClearHistory">Bạn có chắc muốn xóa lịch sử?</string>
    <string name="AreYouSureClearHistoryChannel">Xóa tất cả text và media trong bộ nhớ tạm khỏi kênh này?</string>
    <string name="AreYouSureClearHistoryGroup">Xóa tất cả text và media trong bộ nhớ tạm khỏi nhóm này?</string>
    <string name="AreYouSureDeleteAndExit">Bạn có chắc muốn xóa và rời khỏi nhóm này?</string>
    <string name="AreYouSureDeleteContact">Bạn có chắc muốn xóa liên lạc này?</string>
    <string name="AreYouSureDeleteMessages">Bạn có chắc muốn xóa %1$s?</string>
    <string name="AreYouSureDeletePhoto">Bạn có chắc muốn xóa ảnh này?</string>
    <string name="AreYouSureDeleteThisChat">Bạn có chắc muốn xóa cuộc trò chuyện này?</string>
    <string name="AreYouSureDeleteVideo">Bạn có chắc muốn xóa video này?</string>
    <string name="AreYouSureRegistration">Bạn có chắc muốn hủy việc đăng ký?</string>
    <string name="AreYouSureShareMyContactInfo">Bạn có chắc muốn chia sẻ số điện thoại của bạn?</string>
    <string name="AreYouSureShareMyContactInfoBot">Bot sẽ biết số điện thoại của bạn. Điều này có thể hữu ích cho các dịch vụ khác.</string>
    <string name="app_name">Lotus</string>
    <string name="bt_change_username">Bấm vào đây để nhập username</string>
    <string name="camera_roll">Camera Roll</string>
    <string name="cancel">Hủy</string>
    <string name="done">Done</string>
    <string name="list_suggest">Danh sách gợi ý</string>
    <string name="post">Retus</string>
    <string name="repost">Loan tin</string>
    <string name="save" />
    <string name="search">Tìm kiếm...</string>
    <string name="send">Gửi</string>
    <string name="tag_friend">Tag thành viên</string>
    <string name="text_block">Chặn %s</string>
    <string name="text_block_desc">Không cho phép người này tương tác với bạn</string>
    <string name="text_cancel_creatpost">Hủy</string>
    <string name="text_done">Xong</string>
    <string name="text_done_edit_image">Hoàn tất</string>
    <string name="text_post_tag_friend_done">Hoàn tất</string>
    <string name="text_report_action">Bạn có thể thực hiện xử lý bằng cách</string>
    <string name="text_report_desc">Chúng tôi sẽ xem xét báo cáo của bạn và có biện pháp xử lý phù hợp để đem lại trải nghiệm tốt nhất cho người dùng</string>
    <string name="text_thank_report">Cảm ơn bạn đã báo cáo bài viết</string>
    <string name="text_title_edit_image_creatpost">Chỉnh sửa</string>
    <string name="text_title_tag_friend">Tag bạn bè</string>
    <string name="text_unfollow">Bỏ theo dõi %s</string>
    <string name="text_unfollow_desc">Không hiển thị bài viết từ người này.</string>
    <string name="verify_fb_success">Tài khoản của bạn đã được xác thực Facebook thành công</string>
</resources>