<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="@dimen/toolbar_height">
        <TextView android:id="@id/tv_cancel" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/cancel" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/text_tool_bar_cancel" />
        <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/camera_roll" style="@style/text_tool_bar_title" />
        <TextView android:layout_gravity="right" android:id="@id/tv_done" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/done" style="@style/text_tool_bar_done" />
    </FrameLayout>
    <View android:layout_width="fill_parent" android:layout_height="1.0dip" style="@style/break_line" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/recy_pick_gallery" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</androidx.appcompat.widget.LinearLayoutCompat>