<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:tag="layout/activity_tag_user_0" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/toolbar" android:layout_width="fill_parent" android:layout_height="@dimen/toolbar_height" app:layout_constraintTop_toTopOf="parent">
        <TextView android:id="@id/tv_cancel" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/cancel" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/text_tool_bar_cancel" />
        <TextView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/tag_friend" style="@style/text_tool_bar_title" />
        <TextView android:layout_gravity="right" android:id="@id/tv_done" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/done" style="@style/text_tool_bar_done" />
    </FrameLayout>
    <View android:id="@id/breakline" android:layout_width="fill_parent" app:layout_constraintTop_toBottomOf="@id/toolbar" style="@style/break_line" />
    <EditText android:textSize="13.0sp" android:id="@id/edt_search" android:background="@drawable/bg_edt_search" android:paddingLeft="15.0dip" android:paddingTop="7.0dip" android:paddingBottom="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="13.0dip" android:layout_marginRight="16.0dip" android:hint="@string/search" android:drawableLeft="@drawable/ic_search" android:drawablePadding="8.0dip" app:layout_constraintTop_toBottomOf="@id/breakline" />
    <TextView android:textSize="11.0sp" android:textColor="#ff888d93" android:gravity="center" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="13.0dip" android:text="@string/list_suggest" android:textAllCaps="true" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/edt_search" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_friends_list" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="3.0dip" android:overScrollMode="never" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView" />
    <ProgressBar android:id="@id/pr_loading" android:visibility="gone" android:layout_width="@dimen/size_30" android:layout_height="@dimen/size_30" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>