<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/root" android:tag="layout/history_token_action_interactive_0" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/text_size_15" android:textColor="@color/text_grey_333333" android:id="@id/text_footer_post" android:background="@drawable/bg_all_ripple_click" android:paddingTop="@dimen/size_10" android:paddingBottom="@dimen/size_10" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/post" android:drawablePadding="@dimen/size_10" android:drawableStart="@drawable/ic_footer_post" android:fontFamily="@font/san_francisco_display_regular" app:layout_constraintStart_toStartOf="parent" app:layout_constraintWidth_percent="0.31" />
    <TextView android:textSize="@dimen/text_size_15" android:textColor="@color/text_grey_333333" android:id="@id/text_footer_repost" android:background="@drawable/bg_all_ripple_click" android:paddingTop="@dimen/size_10" android:paddingBottom="@dimen/size_10" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/repost" android:drawablePadding="@dimen/size_10" android:drawableStart="@drawable/ic_footer_repost" android:fontFamily="@font/san_francisco_display_regular" app:layout_constraintStart_toEndOf="@id/text_footer_post" app:layout_constraintWidth_percent="0.33" />
    <TextView android:textSize="@dimen/text_size_15" android:textColor="@color/text_grey_333333" android:id="@id/text_footer_send" android:background="@drawable/bg_all_ripple_click" android:paddingTop="@dimen/size_10" android:paddingBottom="@dimen/size_10" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/send" android:drawablePadding="@dimen/size_10" android:drawableStart="@drawable/ic_footer_send" android:fontFamily="@font/san_francisco_display_regular" android:paddingStart="@dimen/size_10" app:layout_constraintStart_toEndOf="@id/text_footer_repost" app:layout_constraintWidth_percent="0.28" />
    <TextView android:textSize="@dimen/text_size_15" android:textColor="@color/text_grey_333333" android:id="@id/text_footer_save" android:background="@drawable/bg_all_ripple_click" android:paddingTop="@dimen/size_10" android:paddingBottom="@dimen/size_10" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/save" android:drawableEnd="@drawable/ic_footer_save" android:fontFamily="@font/san_francisco_display_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintWidth_percent="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>