<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/dialog_success_report_0" android:paddingBottom="@dimen/size_20" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton android:id="@id/image_close" android:background="@drawable/bg_all_white_btn" android:padding="@dimen/size_18" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_close_more" />
    <TextView android:textColor="@color/black_3" android:id="@id/txt_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_15" android:layout_marginBottom="@dimen/radius_book_bg" android:text="@string/text_thank_report" android:fontFamily="@font/san_francisco_display_semibold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout_text" android:background="@drawable/bg_report_more_action" android:padding="@dimen/size_6" android:layout_width="@dimen/size_83" android:layout_height="@dimen/size_30" android:layout_marginTop="@dimen/size_11" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_title">
        <ImageView android:id="@id/image_spam" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_check_spam" />
        <TextView android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Spam" android:fontFamily="@font/san_francisco_display_semibold" android:layout_marginStart="@dimen/size_2" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/image_spam" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView android:textColor="@color/black_3" android:gravity="center" android:id="@id/txt_first_desc" android:padding="@dimen/size_22" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_report_desc" android:fontFamily="@font/san_francisco_display_regular" android:layout_marginStart="@dimen/size_2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/layout_text" />
    <View android:id="@id/view_one" android:background="@color/black_ee" android:layout_width="fill_parent" android:layout_height="@dimen/size_1" app:layout_constraintTop_toBottomOf="@id/txt_first_desc" />
    <TextView android:textSize="@dimen/text_size_13" android:textColor="@color/black_6" android:id="@id/txt_title_block" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_9" android:text="@string/text_report_action" android:fontFamily="@font/san_francisco_display_semibold" android:layout_marginStart="@dimen/size_56" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/view_one" />
    <ImageView android:id="@id/image_block" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_19" android:layout_marginStart="@dimen/size_25" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_title_block" app:srcCompat="@drawable/ic_block_more" />
    <TextView android:textColor="@color/black_3" android:id="@id/txt_block" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_9" android:text="@string/text_block" android:fontFamily="@font/san_francisco_display_semibold" android:layout_marginStart="@dimen/size_56" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_title_block" />
    <TextView android:textColor="@color/black_3" android:id="@id/txt_block_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_block_desc" android:fontFamily="@font/san_francisco_display_regular" android:layout_marginStart="@dimen/size_56" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_block" />
    <View android:id="@id/view_two" android:background="@color/black_ee" android:layout_width="fill_parent" android:layout_height="@dimen/size_1" android:layout_marginTop="@dimen/size_13" app:layout_constraintTop_toBottomOf="@id/txt_block_desc" />
    <ImageView android:id="@id/image_unfollow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_19" android:layout_marginStart="@dimen/size_25" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/view_two" app:srcCompat="@drawable/ic_follow_more" />
    <TextView android:textColor="@color/black_3" android:id="@id/txt_unfollow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_9" android:text="@string/text_unfollow" android:fontFamily="@font/san_francisco_display_semibold" android:layout_marginStart="@dimen/size_56" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/view_two" />
    <TextView android:textColor="@color/black_3" android:id="@id/txt_unfollow_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_unfollow_desc" android:fontFamily="@font/san_francisco_display_regular" android:layout_marginStart="@dimen/size_56" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_unfollow" />
    <View android:id="@id/view_three" android:background="@color/black_ee" android:layout_width="fill_parent" android:layout_height="@dimen/size_1" android:layout_marginTop="@dimen/size_13" app:layout_constraintTop_toBottomOf="@id/txt_unfollow_desc" />
    <TextView android:textSize="@dimen/text_size_15" android:textColor="@color/white" android:gravity="center" android:background="@drawable/bg_report_more_action" android:layout_width="fill_parent" android:layout_height="@dimen/size_42" android:layout_marginLeft="@dimen/size_16" android:layout_marginTop="@dimen/size_36" android:layout_marginRight="@dimen/size_16" android:text="@string/text_done" android:fontFamily="@font/san_francisco_display_semibold" app:layout_constraintTop_toBottomOf="@id/view_three" />
</androidx.constraintlayout.widget.ConstraintLayout>