<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:tag="layout/layout_confirm_fb_success_0" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/text_size_24" android:textColor="#ff1f9ffc" android:gravity="center" android:id="@id/tv_title_invitation" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/size_8" android:text="@string/app_name" android:fontFamily="@font/san_francisco_display_semibold" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/img_logo_confirm_fb" android:layout_width="0.0dip" android:layout_height="@dimen/size_311" android:layout_marginTop="@dimen/size_44" android:scaleType="fitXY" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title_invitation" app:srcCompat="@drawable/logo_invitation_default" />
    <TextView android:textSize="@dimen/text_size_20" android:textColor="#ff000000" android:gravity="center" android:id="@id/tv_title_account_block" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/size_51" android:layout_marginTop="@dimen/size_26" android:layout_marginRight="@dimen/size_51" android:text="@string/verify_fb_success" android:fontFamily="@font/san_francisco_display_semibold" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/img_logo_confirm_fb" />
    <androidx.constraintlayout.widget.ConstraintLayout android:gravity="center" android:orientation="horizontal" android:id="@id/bt_click_change_username" android:background="@drawable/bg_bt_send_mail" android:layout_width="0.0dip" android:layout_height="@dimen/size_44" android:layout_marginLeft="@dimen/size_32" android:layout_marginTop="@dimen/size_26" android:layout_marginRight="@dimen/size_32" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title_account_block">
        <TextView android:textSize="@dimen/text_size_15" android:textColor="#ffffffff" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bt_change_username" android:fontFamily="@font/san_francisco_display_semibold" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>